Streaming now works

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 	<section class="content">
 			<h1>Coinworth.</h1>
               <div id="graph_div" style = "text-align:center">
-                <iframe width="800" height="400" frameborder="0" scrolling="no" src="https://plot.ly/~lukeanders70/7.embed"></iframe>
+               <iframe width="750" height="450" frameborder="0" scrolling="no" src="https://plot.ly/~m0597/2.embed"></iframe>
               </div>
         </div>
 
